@@ -1,0 +1,14 @@
+#ifndef _CRESCRIPTENGINE_H
+#define	_CRESCRIPTENGINE_H
+
+#include <QScriptEngine>
+
+class CREScriptEngine : public QScriptEngine
+{
+    public:
+        CREScriptEngine();
+        virtual ~CREScriptEngine();
+};
+
+#endif	/* _CRESCRIPTENGINE_H */
+
